import "lib/protocol/attribute.proto";
import "lib/protocol/entity.proto";

package bnet.protocol.invitation;

message Invitation
{
    required fixed64 id = 1;
    required .bnet.protocol.Identity inviter_identity = 2;
    required .bnet.protocol.Identity invitee_identity = 3;
    optional string inviter_name = 4;
    optional string invitee_name = 5;
    optional string invitation_message = 6;
    optional uint64 creation_time = 7;
    optional uint64 expiration_time = 8;
    extensions 100 to 10000;
}

message Suggestion
{
    optional .bnet.protocol.EntityId channel_id = 1;
    required .bnet.protocol.EntityId suggester_id = 2;
    required .bnet.protocol.EntityId suggestee_id = 3;
    optional string suggester_name = 4;
    optional string suggestee_name = 5;
}

message SendInvitationRequest
{
    optional .bnet.protocol.Identity agent_identity = 1;
    required .bnet.protocol.EntityId target_id = 2;
    optional string invitation_message = 3;
    optional uint64 expiration_time = 4 [default = 0];
    extensions 100 to 10000;
}

message SendInvitationResponse
{
    optional .bnet.protocol.invitation.Invitation invitation = 2;
}

message GenericRequest
{
    optional .bnet.protocol.EntityId agent_id = 1;
    optional .bnet.protocol.EntityId target_id = 2;
    required fixed64 invitation_id = 3;
}

